<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.playlistmaker.ui.medialibrary.fragments.MediaLibraryFragment"
        android:label="@string/library" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.ui.search.SearchFragment"
        android:label="@string/search">
        <action
            android:id="@+id/action_searchFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.ui.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.example.playlistmaker.ui.audioplayer.AudioPlayerFragment"
        android:label="@string/player">
        <argument
            android:name="arg_track"
            app:argType="com.example.playlistmaker.domain.models.Track" />
    </fragment>

</navigation>