<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_title_height"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/settings"
        android:textColor="?attr/colorOnSecondary"
        style="@style/MessageTextStyle" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:paddingStart="@dimen/settings_item_text_start"
        style="@style/ItemsSettingsLayoutStyle">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:checked="true"
            android:fontFamily="@font/ys_display_regular"
            android:layout_marginRight="@dimen/settings_item_icon_right"
            android:text="@string/dark_theme"
            android:textSize="@dimen/text_size_16"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareApp"
        style="@style/ItemsSettingsLayoutStyle">
        <TextView android:text="@string/share_app" style="@style/SettingsItemsStyle" />
        <ImageView android:src="@drawable/ic_share_24" style="@style/ImageItemsSettingsStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactSupport"
        style="@style/ItemsSettingsLayoutStyle">
        <TextView android:text="@string/support" style="@style/SettingsItemsStyle" />
        <ImageView android:src="@drawable/ic_support_24" style="@style/ImageItemsSettingsStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userAgreement"
        style="@style/ItemsSettingsLayoutStyle">
        <TextView android:text="@string/user_agreement" style="@style/SettingsItemsStyle" />
        <ImageView android:src="@drawable/ic_arrow_right_24" style="@style/ImageItemsSettingsStyle" />
    </LinearLayout>
</LinearLayout>