<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical"
    android:padding="@dimen/left_right_margins_16">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        >
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="YS Display"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/title_margin_bottom" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:text="@string/search"
            android:id="@+id/btnSearch"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"
            style="@style/mainMenuButtonsStyle"
            />

        <Button
            android:id="@+id/btnMedia"
            android:text="@string/library"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"
            style="@style/mainMenuButtonsStyle"
            />

        <Button
            android:id="@+id/btnSettings"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="1dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"
            style="@style/mainMenuButtonsStyle"
            />
    </LinearLayout>
</LinearLayout>
