<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_title_height"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/search"
        android:textColor="?attr/colorOnSecondary"
        style="@style/MessageTextStyle" />

    <LinearLayout
        style="@style/ItemsSettingsLayoutStyle"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_search"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="44dp"
                android:paddingStart="44dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="?attr/search_hint_color"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="@dimen/text_size_16" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="12dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_search_16" />

            <ImageButton
                android:id="@+id/clearEditSearchButton"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/clear"
                android:src="@drawable/ic_search_clear_16"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="144dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:backgroundTintMode="src_in"
            android:indeterminateTint="@color/blue_background"
            android:indeterminateTintMode="src_in"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/containerSearchHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/historyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/you_were_searching"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="19sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="6dp"
                    android:text="@string/clear_history"
                    android:visibility="gone" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingBottom="8dp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>