<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    android:id="@+id/searchRoot">

    <LinearLayout
        android:id="@+id/searchToolbar"
        android:padding="4dp"
        android:layout_height="@dimen/settings_title_height"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="clip_vertical">

        <Button
            android:stateListAnimator="@null"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cornerRadius="0dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:id="@+id/btnBack"
            app:icon="@drawable/ic_arrow_back_24"
            app:iconGravity="textStart"
            app:iconTint="?attr/colorOnSecondary"/>

        <TextView
            android:layout_gravity="center"
            android:text="@string/search"
            android:textColor="?attr/colorOnSecondary"
            style="@style/MessageTextStyle"/>
    </LinearLayout>

    <LinearLayout
        style="@style/ItemsSettingsLayoutStyle"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/searchEditText"
                android:fontFamily="@font/ys_display_regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_search"
                android:hint="@string/search"
                android:paddingStart="44dp"
                android:paddingEnd="44dp"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_16"
                android:textColorHint="?attr/search_hint_color"
                android:textCursorDrawable="@drawable/custom_cursor"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_search_16"
                android:contentDescription="@null"/>

            <ImageButton
                android:id="@+id/clearEditSearchButton"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_search_clear_16"
                android:contentDescription="@string/clear"
                android:visibility="gone"/>

        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_marginTop="144dp"
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:indeterminateTint="@color/blue_background"
            android:indeterminateTintMode="src_in"
            android:backgroundTint="?attr/colorOnPrimary"
            android:backgroundTintMode="src_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/containerSearchHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/historyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:text="@string/you_were_searching"
                    android:textColor="?attr/colorOnSecondary"
                    android:fontFamily="@font/ys_display_medium"
                    android:textSize="19sp"
                    android:textAlignment="center"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    android:clipToPadding="false"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:text="@string/clear_history"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:paddingBottom="6dp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:clipToPadding="false"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>